package io.hamo.qdio.model.communication;

public enum CommandAction {
    ADD_SONG,
    NOTIFY_UPDATE
}
