package io.hamo.qdio.music;

/**
 * A collection of Track, Album and Artist info from the SpotifyMusicDataService class
 */
public interface MusicObject {

    String getURI();

    String getName();


}
