package io.hamo.qdio.room;

public enum RoomType {
    MASTER,
    SLAVE
}
